--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 astroid==2.5.1
 attrs==20.3.0
+certifi==2020.12.5
+chardet==4.0.0
 click==7.1.2
 Flask==1.1.2
+idna==2.10
 importlib-metadata==3.7.3
 iniconfig==1.1.1
 isort==5.7.0
@@ -18,9 +21,11 @@ pylint==2.7.2
 pyparsing==2.4.7
 pytest==6.2.2
 python-dotenv==0.15.0
+requests==2.25.1
 toml==0.10.2
 typed-ast==1.4.2
 typing-extensions==3.7.4.3
+urllib3==1.26.4
 Werkzeug==1.0.1
 wrapt==1.12.1
 zipp==3.4.1
